[gd_scene load_steps=14 format=3 uid="uid://bcjb1jnr0y5mb"]

[ext_resource type="Script" path="res://scripts/mechanics/power_generator.gd" id="1_btbyj"]
[ext_resource type="PackedScene" uid="uid://evlhef456yfc" path="res://prefabs/power/generated_power_ball.tscn" id="2_uxx3a"]
[ext_resource type="Material" uid="uid://f41eu4cbvian" path="res://materials/player/player_absorb.tres" id="3_88q7i"]
[ext_resource type="PackedScene" uid="uid://b0g4qn342fbge" path="res://prefabs/behaviours/drop_power.tscn" id="4_b084a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1bsd3"]
radius = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_lgj11"]
size = Vector3(0.8, 0.1, 0.8)

[sub_resource type="BoxMesh" id="BoxMesh_wd12u"]
size = Vector3(0.5, 0.1, 0.5)

[sub_resource type="Curve" id="Curve_m6hh0"]
_data = [Vector2(0, 0), -2.37274, -2.37274, 0, 0, Vector2(0.104623, 1), -1.13942e-06, -1.13942e-06, 0, 0, Vector2(1, 0), -0.0990366, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_isa1t"]
curve = SubResource("Curve_m6hh0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6vtgr"]
emission_shape = 2
emission_sphere_radius = 2.0
radial_velocity_min = -10.0
radial_velocity_max = -8.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_isa1t")

[sub_resource type="SphereMesh" id="SphereMesh_fhuju"]
material = ExtResource("3_88q7i")
radius = 0.1
height = 0.2

[sub_resource type="Animation" id="Animation_0en0q"]
resource_name = "power_generator_idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.9, 0), Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o3sd2"]
_data = {
"power_generator_idle": SubResource("Animation_0en0q")
}

[node name="PowerGenerator" type="Node3D"]
script = ExtResource("1_btbyj")
cooldown = 0.5

[node name="PowerCheckArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PowerCheckArea"]
shape = SubResource("SphereShape3D_1bsd3")

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Pivot" type="Node3D" parent="."]

[node name="Base" type="MeshInstance3D" parent="Pivot"]
mesh = SubResource("BoxMesh_lgj11")
skeleton = NodePath("../..")

[node name="Head" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 0)
mesh = SubResource("BoxMesh_wd12u")
skeleton = NodePath("../..")

[node name="SpawnParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.4
interpolate = false
fract_delta = false
local_coords = true
process_material = SubResource("ParticleProcessMaterial_6vtgr")
draw_pass_1 = SubResource("SphereMesh_fhuju")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o3sd2")
}
autoplay = "power_generator_idle"

[node name="DropPower" parent="." instance=ExtResource("4_b084a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
power_scene = ExtResource("2_uxx3a")
power_drop_count = 4
power_drop_offset = 1.5
